--- a/Prover.Client/Windows/MainWindow.xaml
+++ b/Prover.Client/Windows/MainWindow.xaml
@@ -98,20 +98,12 @@
         <Grid Grid.Row="1">
             <ContentControl Margin="0" prism:RegionManager.RegionName="{x:Static regions:RegionNames.MainRegion}" />
         </Grid>
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="2*" />
-            </Grid.ColumnDefinitions>
-            <ContentControl Grid.Column="0" prism:RegionManager.RegionName="{x:Static regions:RegionNames.ListRegion}" />
-            <ContentControl Grid.Column="1" prism:RegionManager.RegionName="{x:Static regions:RegionNames.DetailsRegion}" />
-        </Grid>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Button Command="{Binding SettingsCommand}" Visibility="Hidden">Settings</Button>
+            <!--<Button Command="{Binding SettingsCommand}" Visibility="Hidden">Settings</Button>-->
             <ContentControl Grid.Column="1" prism:RegionManager.RegionName="{x:Static regions:RegionNames.NotificationRegion}" />
         </Grid>
         <!--  <ContentControl prism:RegionManager.RegionName="{x:Static regions:RegionNames.ContentRegion}" />  -->
