Stop button, clean up

--- a/Prover.Instruments.Search/Views/InstrumentDetails.xaml
+++ b/Prover.Instruments.Search/Views/InstrumentDetails.xaml
@@ -618,10 +618,14 @@
                                         </StackPanel>
                                     </StackPanel>
                                 </Grid>
-                                <StackPanel Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right">
+                                <StackPanel Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" Orientation="Horizontal">
                                     <Button Width="100"
                                             Command="{Binding StartTestCommand}"
                                             Content="Start Test"
+                                            Style="{StaticResource SimpleButton}" />
+                                    <Button Width="100"
+                                            Command="{Binding StopTestCommand}"
+                                            Content="Stop"
                                             Style="{StaticResource SimpleButton}" />
                                 </StackPanel>                             
                             </Grid>
