--- a/Prover.Instruments.Search/Views/InstrumentDetails.xaml
+++ b/Prover.Instruments.Search/Views/InstrumentDetails.xaml
@@ -26,7 +26,17 @@
                              CommandParameter="{Binding .}"
                              Content="{Binding .}"
                              Style="{DynamicResource radio2}"
-                             GroupName="CommPorts"/>
+                             GroupName="{Binding .}"/>
+            </WrapPanel>
+        </DataTemplate>
+        <DataTemplate x:Key="TachCommPorts">
+            <WrapPanel>
+                <RadioButton Command="{Binding DataContext.SetTachCommPortCommand,
+                                               RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+                             CommandParameter="{Binding .}"
+                             Content="{Binding .}"
+                             Style="{DynamicResource radio2}"
+                             GroupName="{Binding .}"/>
             </WrapPanel>
         </DataTemplate>
 
@@ -196,6 +206,7 @@
                                 Grid.RowSpan="2"
                                 Grid.Column="1">
                         <TextBlock Margin="20,0,0,0"
+                                    Style="{StaticResource ItemDescriptions}"
                                    Foreground="{DynamicResource HeaderFontColour}"
                                    Text="Baud Rate" />
                         <GroupBox Margin="20,0,0,0"
@@ -207,6 +218,25 @@
                                 <ItemsControl.ItemsPanel>
                                     <ItemsPanelTemplate>
                                         <UniformGrid Margin="4" />
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                            </ItemsControl>
+                        </GroupBox>
+                    </StackPanel>
+                    <!--  Ports  -->
+                    <StackPanel Grid.Row="0" Grid.Column="2">
+                        <TextBlock Margin="20,0,0,0"
+                                   Style="{StaticResource ItemDescriptions}"
+                                   Text="Tach Port" Foreground="{DynamicResource HeaderFontColour}" />
+                        <GroupBox Margin="20,0,0,0"
+                                  BorderThickness="0"
+                                  FontSize="18.667">
+                            <ItemsControl Margin="5"
+                                          ItemTemplate="{StaticResource ResourceKey=TachCommPorts}"
+                                          ItemsSource="{Binding TachCommPorts}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <WrapPanel />
                                     </ItemsPanelTemplate>
                                 </ItemsControl.ItemsPanel>
                             </ItemsControl>
