--- a/Prover.Certificates.View/View/CreateCertificatesView.xaml
+++ b/Prover.Certificates.View/View/CreateCertificatesView.xaml
@@ -4,6 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Prover.Certificates.View"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        
              Foreground="{DynamicResource HeaderColour}"
              d:DesignHeight="300"
              d:DesignWidth="506"
@@ -11,87 +12,7 @@
 
 
     <UserControl.Resources>
-        <CollectionViewSource x:Key="Instruments" Source="{Binding Path=Instruments, Mode=TwoWay}" />
-        <DataTemplate x:Key="temp">
-            <StackPanel Orientation="Vertical" DataContext="{Binding}" Margin="10,0,0,0" >
-                <TextBlock Foreground="Black" Text="{Binding LevelDescription}" FontStyle="Oblique"/>
-                <TextBlock Foreground="Black" Text="{Binding PercentError}" />
-            </StackPanel>
-        </DataTemplate>
-        
-        <DataTemplate x:Key="inst">
-            <Border BorderBrush="Black" BorderThickness="0,0,0,0.25">
-                <Grid DataContext="{Binding Path=Instrument}" >
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="0.10*"/>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Text="{Binding HasPassed}" />
-
-                    <StackPanel Orientation="Vertical" Grid.Column="1">
-                        <TextBlock Width="125"
-                                   Foreground="Black"
-                                   Text="{Binding InstrumentType}" />
-                        <TextBlock Width="125"
-                                   Margin="2"
-                                   HorizontalAlignment="Center"
-                                   VerticalAlignment="Center"
-                                   FontSize="22"
-                                   Foreground="Black"
-                                   Text="{Binding SerialNumber}" />
-                    </StackPanel>
-                    <Grid Height="50" Margin="2" Grid.Column="2">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        <StackPanel Grid.Row="0" Orientation="Horizontal">
-                            <TextBlock Foreground="Black" Text="{Binding CreatedDate}" />
-                        </StackPanel>
-                        <StackPanel Grid.Row="1" Orientation="Horizontal" />
-                        <StackPanel Grid.Row="2" Orientation="Horizontal">
-                            <TextBlock Foreground="Black" Text="S/N 1: " />
-                            <TextBlock Foreground="Black" Text="{Binding SiteNumber1}" />
-                            <TextBlock Margin="5,0,0,0"
-                                       Foreground="Black"
-                                       Text="S/N 2: " />
-                            <TextBlock Foreground="Black" Text="{Binding SiteNumber2}" />
-                        </StackPanel>
-                        <StackPanel Grid.Row="3" Orientation="Horizontal">
-                            <TextBlock Foreground="Black" Text="Meter Type: " />
-                            <TextBlock Foreground="Black" Text="{Binding VolumeTest.MeterType}" />
-                        </StackPanel>
-                        
-                   
-                    </Grid>
-                    <ItemsControl Margin="5" Grid.Column="3"
-                                          ItemTemplate="{StaticResource ResourceKey=temp}"
-                                          ItemsSource="{Binding Temperature.Tests}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <UniformGrid Columns="3" />
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                    </ItemsControl>
-                    
-                    <StackPanel Orientation="Horizontal" Grid.Column="4">
-                        <StackPanel Orientation="Vertical" Margin="10,0,0,0">
-                            <TextBlock Foreground="Black" Text="UnCor. % Error"  />
-                            <TextBlock Foreground="Black" Text="{Binding VolumeTest.UnCorrectedPercentError}" />
-                        </StackPanel>
-                        <StackPanel Orientation="Vertical" Margin="10,0,0,0">
-                            <TextBlock Foreground="Black" Text="Cor. % Error" />
-                            <TextBlock Foreground="Black" Text="{Binding VolumeTest.CorrectedPercentError}" />
-                        </StackPanel>
-                    </StackPanel>
-                </Grid>
-            </Border>
-        </DataTemplate>
+       
         <Style x:Key="InstrumentStyle" TargetType="{x:Type ListBoxItem}">
             <Setter Property="IsSelected" Value="{Binding Path=IsSelected, Mode=TwoWay}" />
             <Style.Triggers>
@@ -158,17 +79,9 @@
                 <ColumnDefinition Width="4*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            <ListBox x:Name="InstrumentList"
-                     Grid.Column="0"
-                     Margin="10"
-                     HorizontalContentAlignment="Stretch"
-                     VerticalContentAlignment="Stretch"
-                     Background="{DynamicResource MainBackgroundColour}"
-                     BorderThickness="0"
-                     ItemContainerStyle="{StaticResource InstrumentStyle}"
-                     ItemTemplate="{StaticResource ResourceKey=inst}"
-                     ItemsSource="{Binding Source={StaticResource Instruments}}"
-                     SelectionMode="Multiple" />
+            <local:CertificatesList 
+                Grid.Column="0"
+                />
 
             <!--  Certificate Information  -->
             <Grid Grid.Column="1">
