--- a/Prover.Certificates.View/View/CertificatesList.xaml
+++ b/Prover.Certificates.View/View/CertificatesList.xaml
@@ -13,7 +13,7 @@
         <CollectionViewSource x:Key="Instruments" Source="{Binding Path=Instruments, Mode=TwoWay}" />
         <DataTemplate x:Key="temp">
             <StackPanel Orientation="Vertical" DataContext="{Binding}" Margin="10,0,0,0" >
-                <TextBlock Foreground="Black" Text="{Binding LevelDescription}" FontStyle="Oblique"/>
+                <TextBlock Foreground="Black" Text="{Binding LevelDescription}" FontStyle="Oblique" FontWeight="Bold" HorizontalAlignment="Center"/>
                 <TextBlock Foreground="Black" Text="{Binding PercentError}" />
             </StackPanel>
         </DataTemplate>
@@ -23,6 +23,8 @@
                 <Grid DataContext="{Binding Path=Instrument}" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="0.10*"/>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
                         <ColumnDefinition />
                         <ColumnDefinition />
                         <ColumnDefinition />
@@ -49,26 +51,63 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <StackPanel Grid.Row="0" Orientation="Horizontal">
-                            <TextBlock Foreground="Black" Text="{Binding CreatedDate}" />
-                        </StackPanel>
-                        <StackPanel Grid.Row="1" Orientation="Horizontal" />
-                        <StackPanel Grid.Row="2" Orientation="Horizontal">
-                            <TextBlock Foreground="Black" Text="S/N 1: " />
+                        <StackPanel Grid.Row="0" Orientation="Horizontal" />
+                        <StackPanel Grid.Row="1" Orientation="Horizontal">
+                            <TextBlock Foreground="Black" Text="S/N 1: " FontWeight="Bold" />
                             <TextBlock Foreground="Black" Text="{Binding SiteNumber1}" />
-                            <TextBlock Margin="5,0,0,0"
-                                       Foreground="Black"
-                                       Text="S/N 2: " />
+                        </StackPanel>
+                        <StackPanel Grid.Row="2" Orientation="Horizontal">
+                            <TextBlock Foreground="Black" Text="S/N 2: " FontWeight="Bold" />
                             <TextBlock Foreground="Black" Text="{Binding SiteNumber2}" />
                         </StackPanel>
                         <StackPanel Grid.Row="3" Orientation="Horizontal">
-                            <TextBlock Foreground="Black" Text="Meter Type: " />
-                            <TextBlock Foreground="Black" Text="{Binding VolumeTest.MeterType}" />
+                            <TextBlock Foreground="Black" Text="Firm. Ver.: " FontWeight="Bold"/>
+                            <TextBlock Foreground="Black" Text="{Binding FirmwareVersion}" />
                         </StackPanel>
-
-
                     </Grid>
-                    <ItemsControl Margin="5" Grid.Column="3"
+                    <Grid Grid.Column="3" Margin="5">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Row="0" Orientation="Horizontal">
+                            <TextBlock Foreground="Black" Text="Meter Type: " FontWeight="Bold" FontSize="16"/>
+                            <TextBlock Foreground="Black" Text="{Binding VolumeTest.MeterType}" FontSize="16" />
+                        </StackPanel>
+                        <StackPanel Grid.Row="1" Orientation="Horizontal">
+                            <TextBlock Foreground="Black" Text="M/D: " FontWeight="Bold" />
+                            <TextBlock Foreground="Black" Text="{Binding VolumeTest.MeterDisplacement}" />
+                        </StackPanel>
+                    </Grid>
+                    <Grid Grid.Column="4" Margin="5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <!-- Row 1 - SiteInformation -->
+                        <StackPanel Grid.Row="0" Grid.Column="0"  Orientation="Vertical">
+                            <TextBlock Foreground="Black" Text="Cor. Multi." FontWeight="Bold"/>
+                            <TextBlock Foreground="Black" Text="{Binding VolumeTest.CorrectedMultiplierDescription}" />
+                        </StackPanel>
+                        <StackPanel Grid.Row="0" Grid.Column="1"  Orientation="Vertical">
+                            <TextBlock Foreground="Black" Text="UnCor. Multi." FontWeight="Bold"/>
+                            <TextBlock Foreground="Black" Text="{Binding VolumeTest.UnCorrectedMultiplierDescription}" />
+                        </StackPanel>
+                        <!-- Row 2 -->
+                        <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical">
+                            <TextBlock Foreground="Black" Text="Energy" FontWeight="Bold" />
+                            <TextBlock Foreground="Black" Text="--" />
+                        </StackPanel>
+                    </Grid>
+                    <ItemsControl Margin="5" Grid.Column="5"
                                           ItemTemplate="{StaticResource ResourceKey=temp}"
                                           ItemsSource="{Binding Temperature.Tests}">
                         <ItemsControl.ItemsPanel>
@@ -78,7 +117,7 @@
                         </ItemsControl.ItemsPanel>
                     </ItemsControl>
 
-                    <StackPanel Orientation="Horizontal" Grid.Column="4">
+                    <StackPanel Orientation="Vertical" Grid.Column="6">
                         <StackPanel Orientation="Vertical" Margin="10,0,0,0">
                             <TextBlock Foreground="Black" Text="UnCor. % Error"  />
                             <TextBlock Foreground="Black" Text="{Binding VolumeTest.UnCorrectedPercentError}" />
